# cpp-first-desktop-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  SConstruct  main.scons
src/: alarmwidget.cpp  alarmwidget.h  main.cpp  main.h  numberdialwidget.cpp  numberdialwidget.h
